Aggiunta pagina dettaglio copertina

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,7 +29,7 @@ body {
     height: 6000px;
 }
 
-.copertina-detaisls {
+.copertina-details {
     display: flex;    
     position: fixed;
     z-index: 1000;
