Implementate animazione home e dettaglio

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 body {
     background-color: #f9f8fb;
+    font-family: 'Karla', sans-serif;
 }
 
 .art-gallery {
@@ -46,3 +47,5 @@ body {
     min-width: 300px;
     max-width: 500px;
 }
+
+
