--- a/src/styles/preloader.scss
+++ b/src/styles/preloader.scss
@@ -16,15 +16,14 @@ body {
   
       #preloader {
         height: auto;
-        bottom: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: #000;
-        z-index: 9999;
-        display: flex;
-        overflow: hidden;
+bottom: 0;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: #000;
+z-index: 9999;
+display: flex;
+overflow: hidden;
       }
     }
   
@@ -85,4 +84,12 @@ body {
 
   #preloader-logo {
     max-width: 620px;
+    width: 620px;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    align-self: center;
   }
