--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@ body {
     display: flex;
     justify-content: space-between;
     perspective: 1000px;
+    overflow: hidden;
 
     .gatsby-image-wrapper {
         max-width: 300px;
@@ -107,6 +108,7 @@ header {
 
 .titolo-specifiche {
     margin-top: 150px;
+margin-bottom: 8px;
     font-size: 56px;
     text-align: center;
 }
@@ -120,7 +122,8 @@ header {
 
 
 .titolo-proprieta {
-    margin-top: 150px;
+    margin-top: 100px;
+    margin-bottom: 8px;
     font-size: 56px;
     text-align: center;
 }
@@ -133,7 +136,7 @@ header {
 }
 
 .titolo-artisti {
-    margin-top: 100px;
+    margin-top: 80px;
     font-size: 56px;
     text-align: center;
 }
@@ -168,4 +171,43 @@ left: 0;
 
 .nav-link__next {
     right: 0;
+}
+
+.button {
+    display: flex;
+   position: relative;
+    top:50%;
+    background-color:white;
+    color: black;
+    font-size: 14px;
+   
+    margin-top: 70px;
+    border: 1px solid black;
+    padding: 14px 48px 16px 48px;
+    border-radius: 50px;
+ 
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+
+    box-shadow: inset 0 0 0 0 black;
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    transition: ease-out 0.4s;
+    
+   
+}
+
+.button:hover {
+
+    box-shadow: inset 400px 0 0 0 black;
+    color: #ffffff;
+}
+
+
+.button-collabora {
+    text-align: center;
+    position: relative;
 }
