--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,204 +1,315 @@
 body {
-    background-color: #ffffff;
-    font-family: 'Karla', sans-serif;
+  background-color: #ffffff;
+  font-family: "Karla", sans-serif;
 }
 
 .art-gallery {
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    width: 100vw;
-    height: 100vw;
-    display: flex;
-    justify-content: space-between;
-    perspective: 1000px;
-    overflow: hidden;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100vw;
+  height: 100vw;
+  display: flex;
+  justify-content: space-between;
+  perspective: 1000px;
+  overflow: hidden;
 
-    .gatsby-image-wrapper {
-        max-width: 300px;
-    }
+  .gatsby-image-wrapper {
+    max-width: 300px;
+  }
 }
 
 .art-gallery__column {
-    flex: 1;
-    display: flex;
-    gap: 100px;
-    flex-direction: column;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  gap: 100px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .art-gallery-space {
-    height: 6000px;
+  height: 6000px;
 }
 
 .copertina-details {
-    display: flex;    
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    justify-content: center;
-    padding: 5%;
-    gap: 20px;
+  display: flex;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  justify-content: center;
+  padding: 5%;
+  gap: 20px;
 }
 
 .copertina-details__testo {
-    min-width: 300px;
-    max-width: 500px;
-  
-}
-
-header {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    top: 30px;
-    right: 0;
-    left: 0;
-    z-index: 1000;
-    gap: 70px;
-    align-items: baseline;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .logo {
-    width: 200px;
+  width: 200px;
 }
 
 .link-navbar {
-    min-width: 120px;
-    text-align: center;
-    text-decoration: none;
-    color: black !important;
-    font-family: 'Karla', sans-serif;
-  
+  min-width: 120px;
+  text-align: center;
+  text-decoration: none;
+  color: black !important;
+  font-family: "Karla", sans-serif;
 }
 
 .titolo-manifesto {
-    margin-top: 150px;
-    font-size: 56px;
-    text-align: center;
+  margin-top: 150px;
+  font-size: 56px;
+  text-align: center;
 }
 
 .testo-manifesto {
-    font-size: 16px;
-    text-align: center;
-    margin-left: 300px;
-    margin-right: 300px;
+  font-size: 16px;
+  text-align: center;
+  margin-left: 300px;
+  margin-right: 300px;
 }
 
 .copertina-dettaglio {
-    margin-left: 300px;
-    margin-top: 160px;
-    justify-content: center;
-    display: inline-flex;
-    gap: 56px;
+  margin-left: 300px;
+  margin-top: 160px;
+  justify-content: center;
+  display: inline-flex;
+  gap: 56px;
 }
 
 .copertina-info {
-    min-width: 300px;
-    max-width: 420px;
+  min-width: 300px;
+  max-width: 420px;
 
-    h4 {
-        font-size: 20px;
-    }
+  h4 {
+    font-size: 20px;
+  }
 }
 
-
 .titolo-specifiche {
-    margin-top: 150px;
-margin-bottom: 8px;
-    font-size: 56px;
-    text-align: center;
+  margin-top: 150px;
+  margin-bottom: 8px;
+  font-size: 56px;
+  text-align: center;
 }
 
 .testo-specifiche {
-    font-size: 16px;
-    text-align: center;
-    margin-left: 300px;
-    margin-right: 300px;
+  font-size: 16px;
+  text-align: center;
+  margin-left: 300px;
+  margin-right: 300px;
 }
 
-
 .titolo-proprieta {
-    margin-top: 100px;
-    margin-bottom: 8px;
-    font-size: 56px;
-    text-align: center;
+  margin-top: 100px;
+  margin-bottom: 8px;
+  font-size: 56px;
+  text-align: center;
 }
 
 .testo-proprieta {
-    font-size: 16px;
-    text-align: center;
-    margin-left: 300px;
-    margin-right: 300px;
+  font-size: 16px;
+  text-align: center;
+  margin-left: 300px;
+  margin-right: 300px;
 }
 
 .titolo-artisti {
-    margin-top: 80px;
-    font-size: 56px;
-    text-align: center;
+  margin-top: 80px;
+  font-size: 56px;
+  text-align: center;
 }
 
 .lista-artisti {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    list-style-type: none;
-    padding-left: 0;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  list-style-type: none;
+  padding-left: 0;
 
-    li {
-        border: 1px solid black;
-        padding: 6px 16px 8px 16px;
-        border-radius: 50px;
-    
-    }
+  li {
+    border: 1px solid black;
+    padding: 6px 16px 8px 16px;
+    border-radius: 50px;
+  }
 }
 
 .nav-link {
-    padding: 6px 16px 8px 16px;
-    text-decoration: none;
-    position: fixed;
-    top: calc(50% - 16px);
-    background-color: black;
-    color: white;
+  padding: 6px 16px 8px 16px;
+  text-decoration: none;
+  position: fixed;
+  top: calc(50% - 16px);
+  background-color: black;
+  color: white;
 }
 
 .nav-link__prev {
-left: 0;
+  left: 0;
 }
 
 .nav-link__next {
-    right: 0;
+  right: 0;
 }
 
 .button-collabora {
-    display: inline-block;
-    position: relative;
-    background-color:white;
-    color: black;
-    font-size: 14px;
-    border: 1px solid black;
-    padding: 14px 48px 16px 48px;
-    border-radius: 50px;
-    cursor: pointer;
+  display: inline-block;
+  position: relative;
+  background-color: white;
+  color: black;
+  font-size: 14px;
+  border: 1px solid black;
+  padding: 14px 48px 16px 48px;
+  border-radius: 50px;
+  cursor: pointer;
 
-    box-shadow: inset 0 0 0 0 black;
-    transition: ease-out 0.4s;
-    text-decoration: none;
-    
-   
+  box-shadow: inset 0 0 0 0 black;
+  transition: ease-out 0.4s;
+  text-decoration: none;
 }
 
 .button-collabora:hover {
-    box-shadow: inset 400px 0 0 0 black;
-    color: #ffffff;
+  box-shadow: inset 400px 0 0 0 black;
+  color: #ffffff;
 }
 
-
 .button-collabora-container {
-    text-align: center;
-    margin-top: 70px;
-    // position: relative;
+  text-align: center;
+  margin-top: 70px;
+  // position: relative;
+}
+
+.copertine-mobile-container {
+  margin-top: 140px;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#menu-mobile {
+  position: fixed;
+  top: -200px;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background-color: #000;
+  font-size: 16px;
+  padding: 20px;
+
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  .link-navbar {
+    color: #ffffff !important;
+    line-height: 44px;
+  }
+}
+
+#header {
+  display: none;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  top: 30px;
+  right: 0;
+  left: 0;
+  z-index: 1000;
+  gap: 70px;
+  align-items: baseline;
+}
+
+#header-mobile {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.94);
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  z-index: 1000;
+  align-items: center;
+
+  .logo {
+    max-height: 50px;
+    text-align: left;
+  }
+}
+
+#burger-menu {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  transition: 0.5s;
+  z-index: 100;
+
+  .menu-line1 {
+    width: 100%;
+    height: 1px;
+    background: #000;
+  }
+
+  .menu-line2 {
+    width: 80%;
+    height: 1px;
+    margin-top: 8px;
+    background: #000;
+  }
+
+  &.menu--open {
+    .menu-line2,
+    .menu-line1 {
+      background-color: white;
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .si-mobile {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .no-mobile {
+    display: none !important;
+  }
+  .page {
+    max-width: 80vw;
+    margin: 140px auto 20px auto;
+  }
+  .copertina-dettaglio {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .testo-manifesto,
+  .testo-specifiche,
+  .testo-proprieta,
+  .copertina-dettaglio {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .lista-artisti {
+    flex-direction: column;
+
+    li {
+      padding: 14px 16px 16px 16px;
+    }
+  }
+
+  .nav-link {
+    padding: 10px;
+  }
 }
