--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -185,6 +185,7 @@ body {
 
 .copertine-mobile-container {
   margin-top: 140px;
+  margin-bottom: 80px;
   display: flex;
   flex-direction: column;
   gap: 100px;
