--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -275,6 +275,16 @@ body {
   }
 }
 
+.opensea-btn {
+  display: inline-block;
+  max-width: 160px;
+  border-radius: 5px;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  img {
+    width: 100%;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   .si-mobile {
     display: none !important;
