--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -277,11 +277,13 @@ body {
 
 .opensea-btn {
   display: inline-block;
-  max-width: 160px;
+  max-width: 120px;
   border-radius: 5px;
-  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  margin-top: 40px;
+
   img {
-    width: 100%;
+    max-width: 100%;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
   }
 }
 
