aumentata specificità delle immagini chieste a Gatsby Image

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,11 @@ body {
   .gatsby-image-wrapper {
     max-width: 300px;
   }
+  // .copertina-image {
+  //   max-width: 260px;
+  //   height: 368px;
+  //   background: #eee;
+  // }
 }
 
 .art-gallery__column {
